--- a/example_codes/building_llms_for_productions/langchain/20_output_parser_pydanticOutputParser.ipynb
+++ b/example_codes/building_llms_for_productions/langchain/20_output_parser_pydanticOutputParser.ipynb
@@ -23,52 +23,409 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup environment"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(override=True, dotenv_path=\"../.env\")\n",
+    "\n",
+    "# os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_conversation = \"\"\"\n",
+    "From: John (John@bikecorporation.me)\n",
+    "To: Kim (Kim@teddyinternational.me)\n",
+    "Subject: “ZENESIS” bike distribution cooperation and meeting schedule proposal\n",
+    "Dear Mr. Kim,\n",
+    "\n",
+    "I am John, Senior Executive Director at Bike Corporation. I recently learned about your new bicycle model, \"ZENESIS,\" through your press release. Bike Corporation is a company that leads innovation and quality in the field of bicycle manufacturing and distribution, with long-time experience and expertise in this field.\n",
+    "\n",
+    "We would like to request a detailed brochure for the ZENESIS model. In particular, we need information on technical specifications, battery performance, and design aspects. This information will help us further refine our proposed distribution strategy and marketing plan.\n",
+    "\n",
+    "Additionally, to discuss the possibilities for collaboration in more detail, I propose a meeting next Tuesday, January 15th, at 10:00 AM. Would it be possible to meet at your office to have this discussion?\n",
+    "\n",
+    "Thank you.\n",
+    "\n",
+    "Best regards,\n",
+    "John\n",
+    "Senior Executive Director\n",
+    "Bike Corporation\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.messages import AIMessageChunk\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "prompt = PromptTemplate.from_template(\n",
+    "  \"Please extract the important parts of the following email.\\n\\n{email_conversation}\"\n",
+    ")\n",
+    "\n",
+    "chain = prompt | llm | StrOutputParser()\n",
+    "answer = chain.stream({\"email_conversation\": email_conversation})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stream_response(response, return_output=False):\n",
+    "    \"\"\"\n",
+    "    Streams the response from the AI model, processing and printing each chunk.\n",
+    "\n",
+    "    This function iterates over each item in the 'response' iterable. If an item is an instance of AIMessageChunk, it extracts and prints the content.\n",
+    "    If the item is a string, it prints the string directly.\n",
+    "    Optionally, the function can return the concatenated string of all response chunks.\n",
+    "\n",
+    "    Args:\n",
+    "    - response (iterable): An iterable of response chunks, which can be AIMessageChunk objects or strings.\n",
+    "    - return_output (bool, optional): If True, the function returns the concatenated response string. The default is False.\n",
+    "\n",
+    "    Returns:\n",
+    "    - str: If `return_output` is True, the concatenated response string. Otherwise, nothing is returned.\n",
+    "    \"\"\"\n",
+    "    answer = \"\"\n",
+    "    for token in response:\n",
+    "        if isinstance(token, AIMessageChunk):\n",
+    "            answer += token.content\n",
+    "            print(token.content, end=\"\", flush=True)\n",
+    "        elif isinstance(token, str):\n",
+    "            answer += token\n",
+    "            print(token, end=\"\", flush=True)\n",
+    "    if return_output:\n",
+    "        return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "**Important Parts of the Email:**\n",
-      "- **Sender:** John (Senior Executive Director, Bike Corporation)\n",
-      "- **Recipient:** Kim (Teddy International)\n",
-      "- **Subject:** ZENESIS bike distribution cooperation and meeting schedule proposal\n",
-      "- **Request:** Detailed brochure for the ZENESIS model, specifically information on:\n",
-      "  - Technical specifications\n",
-      "  - Battery performance\n",
-      "  - Design aspects\n",
-      "- **Purpose:** To refine distribution strategy and marketing plan for ZENESIS.\n",
-      "- **Proposed Meeting:** \n",
-      "  - Date: Tuesday, January 15th\n",
-      "  - Time: 10:00 AM\n",
-      "  - Location: Kim's office\n",
-      "- **Closing:** Thank you and best regards.\n",
-      "\n"
+      "- John is from Bike Corporation and is interested in collaborating with Teddy International on their new bicycle model \"ZENESIS\"\n",
+      "- Bike Corporation is a company with experience in bicycle manufacturing and distribution\n",
+      "- Request for a detailed brochure on the ZENESIS model, specifically technical specifications, battery performance, and design aspects\n",
+      "- Proposal for a meeting on Tuesday, January 15th at 10:00 AM to discuss collaboration possibilities"
      ]
     }
    ],
    "source": [
-    "example_response = \"\"\"\n",
-    "**Important Parts of the Email:**\n",
-    "- **Sender:** John (Senior Executive Director, Bike Corporation)\n",
-    "- **Recipient:** Kim (Teddy International)\n",
-    "- **Subject:** ZENESIS bike distribution cooperation and meeting schedule proposal\n",
-    "- **Request:** Detailed brochure for the ZENESIS model, specifically information on:\n",
-    "  - Technical specifications\n",
-    "  - Battery performance\n",
-    "  - Design aspects\n",
-    "- **Purpose:** To refine distribution strategy and marketing plan for ZENESIS.\n",
-    "- **Proposed Meeting:** \n",
-    "  - Date: Tuesday, January 15th\n",
-    "  - Time: 10:00 AM\n",
-    "  - Location: Kim's office\n",
-    "- **Closing:** Thank you and best regards.\n",
-    "\"\"\"\n",
+    "output = stream_response(answer, return_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- John is from Bike Corporation and is interested in collaborating with Teddy International on their new bicycle model \"ZENESIS\"\n",
+      "- Bike Corporation is a company with experience in bicycle manufacturing and distribution\n",
+      "- Request for a detailed brochure on the ZENESIS model, specifically technical specifications, battery performance, and design aspects\n",
+      "- Proposal for a meeting on Tuesday, January 15th at 10:00 AM to discuss collaboration possibilities\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use PydanticOutputParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import PydanticOutputParser\n",
+    "from pydantic import BaseModel, Field\n",
     "\n",
-    "print(example_response)"
+    "class EmailSummary(BaseModel):\n",
+    "    person: str = Field(description=\"The sender of the email\")\n",
+    "    email: str = Field(description=\"The email address of the sender\")\n",
+    "    subject: str = Field(description=\"The subject of the email\")\n",
+    "    summary: str = Field(description=\"A summary of the email content\")\n",
+    "    date: str = Field(\n",
+    "        description=\"The meeting date and time mentioned in the email content\"\n",
+    "    )\n",
+    "    \n",
+    "parser = PydanticOutputParser(pydantic_object=EmailSummary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output should be formatted as a JSON instance that conforms to the JSON schema below.\n",
+      "\n",
+      "As an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\", \"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}}, \"required\": [\"foo\"]}\n",
+      "the object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema. The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\n",
+      "\n",
+      "Here is the output schema:\n",
+      "```\n",
+      "{\"properties\": {\"person\": {\"description\": \"The sender of the email\", \"title\": \"Person\", \"type\": \"string\"}, \"email\": {\"description\": \"The email address of the sender\", \"title\": \"Email\", \"type\": \"string\"}, \"subject\": {\"description\": \"The subject of the email\", \"title\": \"Subject\", \"type\": \"string\"}, \"summary\": {\"description\": \"A summary of the email content\", \"title\": \"Summary\", \"type\": \"string\"}, \"date\": {\"description\": \"The meeting date and time mentioned in the email content\", \"title\": \"Date\", \"type\": \"string\"}}, \"required\": [\"person\", \"email\", \"subject\", \"summary\", \"date\"]}\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parser.get_format_instructions())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining the prompt:\n",
+    "\n",
+    "1. `question`: Receives the user's question.\n",
+    "2. `email_conversation`: Inputs the content of the email conversation.\n",
+    "3. `format`: Specifies the format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
+    "You are a helpful assistant. \n",
+    "\n",
+    "QUESTION:\n",
+    "{question}\n",
+    "\n",
+    "EMAIL CONVERSATION:\n",
+    "{email_conversation}\n",
+    "\n",
+    "FORMAT:\n",
+    "{format}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "# Add partial formatting of PydanticOutputParser to format\n",
+    "prompt = prompt.partial(format=parser.get_format_instructions())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt | llm "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"person\": \"John\",\n",
+      "  \"email\": \"John@bikecorporation.me\",\n",
+      "  \"subject\": \"ZENESIS bike distribution cooperation and meeting schedule proposal\",\n",
+      "  \"summary\": \"Bike Corporation is interested in collaborating with Teddy International for distributing the ZENESIS bike model. They are requesting a detailed brochure for the ZENESIS model to refine their distribution strategy and marketing plan. A meeting is proposed for next Tuesday, January 15th, at 10:00 AM.\",\n",
+      "  \"date\": \"Tuesday, January 15th, 10:00 AM\"\n",
+      "}"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute the chain and print the result.\n",
+    "response = chain.stream(\n",
+    "    {\n",
+    "        \"email_conversation\": email_conversation,\n",
+    "        \"question\": \"Extract the main content of the email.\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# The result is provided in JSON format.\n",
+    "output = stream_response(response, return_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person='John' email='John@bikecorporation.me' subject='ZENESIS bike distribution cooperation and meeting schedule proposal' summary='Bike Corporation is interested in collaborating with Teddy International for distributing the ZENESIS bike model. They are requesting a detailed brochure for the ZENESIS model to refine their distribution strategy and marketing plan. A meeting is proposed for next Tuesday, January 15th, at 10:00 AM.' date='Tuesday, January 15th, 10:00 AM'\n"
+     ]
+    }
+   ],
+   "source": [
+    "structured_output = parser.parse(output)\n",
+    "print(structured_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt | llm | parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person='John' email='John@bikecorporation.me' subject='ZENESIS bike distribution cooperation and meeting schedule proposal' summary='Bike Corporation is interested in collaborating with Teddy International for distributing the ZENESIS bike model. They are requesting a detailed brochure for the ZENESIS model to refine their distribution strategy and marketing plan. A meeting is proposed for next Tuesday, January 15th, at 10:00 AM.' date='Tuesday, January 15th, 10:00 AM'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute the chain and print the results.\n",
+    "response = chain.invoke(\n",
+    "    {\n",
+    "        \"email_conversation\": email_conversation,\n",
+    "        \"question\": \"Extract the main content of the email.\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# The results are output in the form of an EmailSummary object.\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `with_structured_output()`\n",
+    "\n",
+    "By using `.with_structured_output(Pydantic)`, you can add an output parser and convert the output into a Pydantic object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dino/miniconda3/envs/langchain/lib/python3.10/site-packages/langchain_openai/chat_models/base.py:1390: UserWarning: Cannot use method='json_schema' with model gpt-3.5-turbo since it doesn't support OpenAI's Structured Output API. You can see supported models here: https://platform.openai.com/docs/guides/structured-outputs#supported-models. To fix this warning, set `method='function_calling'. Overriding to method='function_calling'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm_with_structure = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.0).with_structured_output(EmailSummary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = llm_with_structure.invoke(email_conversation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EmailSummary(person='John', email='John@bikecorporation.me', subject='“ZENESIS” bike distribution cooperation and meeting schedule proposal', summary='John, Senior Executive Director at Bike Corporation, is interested in collaborating with Teddy International on distributing their new bicycle model, ZENESIS. He requests a detailed brochure for the ZENESIS model to refine their distribution strategy and marketing plan. John also proposes a meeting on Tuesday, January 15th, at 10:00 AM, to discuss collaboration possibilities.', date='Tuesday, January 15th, 10:00 AM')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
    ]
   },
   {
@@ -76,9 +433,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from langchain_core.runnables import RunnablePassthrough"
-   ]
+   "source": []
   }
  ],
  "metadata": {
